--- a/index.html
+++ b/index.html
@@ -1,1 +1,145 @@
-Hello World
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Daniel Zeljko</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+
+    <!-- Nav -->
+    <div class="bg-dark py-4">
+      <div class="container">
+        <div class="d-flex justify-content-end">
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link text-secondary fw-bold" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-secondary fw-bold" href="#projects">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-secondary fw-bold" href="#contact">Contact</a>
+            </li>
+          </ul>
+          <button class="btn btn-outline-light">Resume</button>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Welcome -->
+    <section class="bg-dark text-white">
+      <div class="container">
+          <div id="welcome" class="row d-flex align-items-center">
+            <div class="col-12 col-md-8 order-2 order-md-1 mt-5 mt-md-0">
+              <p class="fw-bold text-muted fs-5">Jr. Software Engineer</p>
+              <h1>Daniel Zeljko</h1>
+              <p>Anim ad duis esse est proident ea commodo duis aute commodo sint officia velit aliqua. Consectetur ullamco eiusmod ex labore. Aliquip commodo sit tempor dolore esse enim. Id elit esse ullamco et officia labore elit pariatur culpa proident est. Commodo consectetur excepteur irure eiusmod qui amet do irure. Nulla pariatur pariatur et labore ea. Elit quis officia consectetur nulla sint anim anim ipsum.</p>
+              <div class="">
+                <button class="btn btn-light">Download Resume</button>
+                <button class="btn btn-outline-light">Contact</button>
+              </div>
+            </div>
+            <div class="col-12 col-md-4 order-1 order-md-2">
+              <img class="img-fluid" src="https://www.ateneo.edu/sites/default/files/styles/large/public/2021-11/istockphoto-517998264-612x612.jpeg?itok=aMC1MRHJ">
+            </div>
+          </div>
+      </div>
+    </section>
+
+    <!-- About -->
+    <section id="about" class="section-wrapper">
+      <div class="container">
+        <h2 class="pb-4">About me</h2>
+        <p>
+          Helloooh! <br>
+          My name is Daniel and I enjoy building web applications. My interests
+          in web development started back in 2019 <span id="year"></span>, when
+          I was a senior at <a target="_blank" href="https://www.sfsu.edu/"
+          title="Opens SFSU in a new tab">San Francisco State University</a>. I
+          was a pretty broke college student, and I wasn't able to afford
+          tutoring when my upper division Japanese course work started getting
+          difficult. I knew I needed to do something to get help for free, and
+          little did I know that desperate situation would lead me to creating a
+          pretty humble language learning platform that is being used by students
+          worldwide. <span class="text-muted">Curious? You can visit and learn
+          more by going to the project section down below!</span>
+        </p>
+        <p>
+          I thought myself the basics of web development, but I realized there
+          were some gaps in my knowledge. In an effort to fill in those gaps,
+          I decided to invest in myself and my professional career by signing up
+          to a coding bootcamp. There I'll be able to solidfy my foundations,
+          and learn new technologies needed to be a competitive jr. software
+          engineer.
+        </p>
+
+        <p>Here are a few technologies I've been working with recently:</p>
+        <ul id="skills-list">
+          <li>JavaScript (ES6+)</li>
+          <li>React</li>
+          <li>Node.js</li>
+        </ul>
+
+        <hr class="my-5">
+
+        <h3 class="mb-4">My coding journey</h3>
+        <ul class="list-unstyled" id="timeline-ul"></ul>
+      </div>
+    </section>
+
+    <!-- Projects -->
+    <section id="projects" class="bg-lc text-white section-wrapper">
+      <div class="container">
+        <h2 class="text-center">Projects I've worked on</h2>
+        <div class="row d-flex align-items-center">
+          <div class="col-12 col-md-6 mb-3 mb-md-0">
+            <img src="images/langcorrect.png" class="img-fluid">
+          </div>
+          <div class="col-12 col-md-6 mt-3 mt-md-0">
+            <p class="fw-bold mb-2"><span class="badge text-bg-light">Featured Project</span></p>
+            <h3><a class="text-white" href="https://langcorrect.com/" target="_blank" title="Opens LangCorrect in a new tab">LangCorrect</a></h3>
+            <div>
+              <p>A responsive web application for foreign language students that
+                want to master grammar, spelling, and syntax in the language(s)
+                they're learning through direct feedback from native speakers.
+              </p>
+              <ul class="d-flex gap-4 flex-wrap list-unstyled">
+                <li>Django</li>
+                <li>SCSS</li>
+                <li>Bootstrap</li>
+                <li>PostgreSQL</li>
+                <li>Digital Ocean</li>
+                <li>CloudFlare</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact" class="section-wrapper">
+      <div class="container">
+        <div id="contactDiv">
+          <h2 class="mb-4">Get in Touch</h2>
+          <p class="w">
+            Although I'm currently not looking for any new opportunities, my inbox
+            is always open! Whether you have a question, want to say hi, or send
+            me your favorite pet photo (mandatory pet tax), I'll try my best to get back to you!
+          </p>
+          <a href="mailto:masemunejp@gmail.com" class="btn btn-outline-secondary px-5">Email</a>
+        </div>
+      </div>
+    </section>
+
+    <script src="project.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  </body>
+</html>
