add resume, favicons, webp, and fix grammar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
 
@@ -28,7 +32,7 @@
               <a class="nav-link text-secondary fw-bold" href="#contact">Contact</a>
             </li>
           </ul>
-          <button class="btn btn-outline-light">Resume</button>
+          <a href="daniel_zeljko_resume.pdf" class="btn btn-outline-light" download>Resume</a>
         </div>
       </div>
     </div>
@@ -43,7 +47,7 @@
               <h1>Daniel Zeljko</h1>
               <p>Anim ad duis esse est proident ea commodo duis aute commodo sint officia velit aliqua. Consectetur ullamco eiusmod ex labore. Aliquip commodo sit tempor dolore esse enim. Id elit esse ullamco et officia labore elit pariatur culpa proident est. Commodo consectetur excepteur irure eiusmod qui amet do irure. Nulla pariatur pariatur et labore ea. Elit quis officia consectetur nulla sint anim anim ipsum.</p>
               <div class="">
-                <button class="btn btn-light">Download Resume</button>
+                <a href="daniel_zeljko_resume.pdf" class="btn btn-light me-3" download>Download Resume</a>
                 <button class="btn btn-outline-light">Contact</button>
               </div>
             </div>
@@ -60,23 +64,23 @@
         <h2 class="pb-4">About me</h2>
         <p>
           Helloooh! <br>
-          My name is Daniel and I enjoy building web applications. My interests
-          in web development started back in 2019 <span id="year"></span>, when
-          I was a senior at <a target="_blank" href="https://www.sfsu.edu/"
-          title="Opens SFSU in a new tab">San Francisco State University</a>. I
-          was a pretty broke college student, and I wasn't able to afford
-          tutoring when my upper division Japanese course work started getting
+          My name is Daniel and I enjoy building web applications. My interest in
+          web development started back in 2019 <span id="year"></span> when I was
+          a senior at <a target="_blank" href="https://www.sfsu.edu/"
+          title="Opens SFSU in a new tab">San Francisco State University</a>.
+          I was a pretty broke college student, and I wasn't able to afford
+          tutoring when my upper-division Japanese coursework started getting
           difficult. I knew I needed to do something to get help for free, and
-          little did I know that desperate situation would lead me to creating a
-          pretty humble language learning platform that is being used by students
-          worldwide. <span class="text-muted">Curious? You can visit and learn
-          more by going to the project section down below!</span>
+          little did I know that desperate situation would lead me to create a
+          pretty humble language learning platform that is being used by
+          students worldwide. <span class="text-muted">Curious? You can visit
+            and learn more by going to the project section down below!</span>
         </p>
-        <p>
-          I thought myself the basics of web development, but I realized there
-          were some gaps in my knowledge. In an effort to fill in those gaps,
-          I decided to invest in myself and my professional career by signing up
-          to a coding bootcamp. There I'll be able to solidfy my foundations,
+
+        <p>I thought myself the basics of web development, but I realized there
+          were some gaps in my knowledge. In an effort to fill in those gaps, I
+          decided to invest in myself and my professional career by signing up
+          for a coding Bootcamp. There I'll be able to solidify my foundations
           and learn new technologies needed to be a competitive jr. software
           engineer.
         </p>
@@ -101,7 +105,7 @@
         <h2 class="text-center">Projects I've worked on</h2>
         <div class="row d-flex align-items-center">
           <div class="col-12 col-md-6 mb-3 mb-md-0">
-            <img src="images/langcorrect.png" class="img-fluid">
+            <img src="images/langcorrect.webp" class="img-fluid">
           </div>
           <div class="col-12 col-md-6 mt-3 mt-md-0">
             <p class="fw-bold mb-2"><span class="badge text-bg-light">Featured Project</span></p>
