add timeline legend

--- a/index.html
+++ b/index.html
@@ -101,7 +101,12 @@
         <hr class="my-5">
 
         <h3 class="mb-4">My coding journey</h3>
-        <ul class="list-unstyled" id="timeline-ul"></ul>
+        <ul class="list-unstyled" id="timeline-ul">
+          <p class="fw-bold">
+            <i class="fa-solid fa-circle fa-2xs pe-1"></i> General
+            <span class="color-lc ps-2"><i class="fa-solid fa-circle fa-2xs pe-1"></i> Projects</span>
+          </p>
+        </ul>
       </div>
     </section>
 
