--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="container">
           <div id="welcome" class="row d-flex align-items-center">
             <div class="col-12 col-md-8 order-2 order-md-1">
-              <p class="fw-bold text-muted fs-5">Jr. Software Engineer</p>
+              <p class="fw-bold text-muted fs-5">Software Engineer</p>
               <h1>Daniel Zeljko</h1>
               <p class="pb-3 intro">Currently, I am a Bootcamp student at <a href="https://www.rithmschool.com/" class="link-light" target="_blank" title="Opens Rithm School in a new tab">Rithm School</a> where I am working to solidify my foundations and learn new technologies.</p>
               <div class="d-flex flex-wrap gap-3">
